--- a/src/index.css
+++ b/src/index.css
@@ -20,51 +20,191 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+  padding: 0;
   font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  font-size: inherit;
+  line-height: inherit;
+  font-weight: inherit;
+  color: inherit;
+  background-color: inherit;
+  background-color: #F14E95;
+  color: #fff;
 }
-button:hover {
+
+nav {
+  padding: 0.4em 0.8em;
+  font-size: 0.8em;
+  font-weight: 400;
+  border-bottom: 1px solid #1a1a1a;
+  transition: border-color 0.25s;
+  background-color: #EC4C8A;
+
+}
+
+nav:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+
+nav:focus,
+nav:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.nav-ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0 0.8em;
+  font-size: 20px;
+}
+
+.nav-li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-li+.nav-li {
+  margin-left: 1.2em;
+}
+
+.nav-a {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0 1.2em;
+  max-width: 800px;
+}
+
+.company-name {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2em;
+  font-weight: 500;
+  margin-left: 20px;
+  padding: 20px;
+
+}
+
+.bg-pink {
+  background-color: #FB5092;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 100%;
+  grid-gap: 0.2em;
+
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.2em;
+  border-radius: 8px;
+  background-color: #16213E;
+  transition: background-color 0.25s;
+}
+
+.card:nth-child(4n + 1),
+.card:nth-child(4n + 4) {
+  background-color: #2C3639;
+}
+
+.card-title {
+  font-size: 1.2em;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+
+.card-description {
+  font-size: 1em;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+
+.card-image {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+
+.card-image+.card-title {
+  margin-top: 1.2em;
+}
+
+.card-image+.card-description {
+  margin-top: 0.6em;
+}
+
+.lists {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  list-style: none;
+}
+
+.head {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  height: 200px;
+  color: #fff;
+}
+
+.list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 10px;
+  list-style: none;
+}
+
+.list:nth-child(odd) {
+  background-color: #2C3639;
+
+}
+
+.list:nth-child(even) {
+  background-color: #16213E;
+}
+
+.list h3 {
+  font-size: 16px;
+  font-weight: 800;
 }
