--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,3 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
 
 a {
   font-weight: 500;
@@ -32,8 +16,7 @@ body {
   font-size: inherit;
   line-height: inherit;
   font-weight: inherit;
-  color: inherit;
-  background-color: #256D85;
+  background-color: #256d85;
   color: #fff;
 }
 
@@ -43,8 +26,7 @@ nav {
   font-weight: 400;
   border-bottom: 1px solid #1a1a1a;
   transition: border-color 0.25s;
-  background-color: #06283D;
-
+  background-color: #06283d;
 }
 
 nav:hover {
@@ -74,7 +56,7 @@ nav:focus-visible {
   align-items: center;
 }
 
-.nav-li+.nav-li {
+.nav-li + .nav-li {
   margin-left: 1.2em;
 }
 
@@ -106,11 +88,10 @@ nav:focus-visible {
   font-weight: 500;
   margin-left: 20px;
   padding: 20px;
-
 }
 
 .bg-pink {
-  background-color: #256D85;
+  background-color: #256d85;
 }
 
 .row {
@@ -118,7 +99,6 @@ nav:focus-visible {
   grid-template-columns: 1fr 1fr;
   max-width: 100%;
   grid-gap: 0.2em;
-
 }
 
 .card {
@@ -128,13 +108,13 @@ nav:focus-visible {
   align-items: center;
   padding: 1.2em;
   border-radius: 8px;
-  background-color: #16213E;
+  background-color: #16213e;
   transition: background-color 0.25s;
 }
 
 .card:nth-child(4n + 1),
 .card:nth-child(4n + 4) {
-  background-color: #2C3639;
+  background-color: #2c3639;
 }
 
 .card-title {
@@ -159,11 +139,11 @@ nav:focus-visible {
   padding: 0;
 }
 
-.card-image+.card-title {
+.card-image + .card-title {
   margin-top: 1.2em;
 }
 
-.card-image+.card-description {
+.card-image + .card-description {
   margin-top: 0.6em;
 }
 
@@ -172,7 +152,6 @@ nav:focus-visible {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   list-style: none;
 }
 
@@ -195,12 +174,11 @@ nav:focus-visible {
 }
 
 .list:nth-child(odd) {
-  background-color: #2C3639;
-
+  background-color: #2c3639;
 }
 
 .list:nth-child(even) {
-  background-color: #16213E;
+  background-color: #16213e;
 }
 
 .list h3 {
